crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__invalid_commit.py.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE8102 Use of cr.commit() directly
 --> invalid_commit.py:5:9
  |
4 |     def write(self, vals):
5 |         self.env.cr.commit()
  |         ^^^^^^^^^^^^^^^^^^^^
6 |         return super().write(vals)
  |

ODE8102 Use of cr.commit() directly
  --> invalid_commit.py:15:5
   |
13 | def post_init_hook(env):
14 |     # Flagged: `env.cr` is the cursor of the environment Odoo hands to the hook.
15 |     env.cr.commit()
   |     ^^^^^^^^^^^^^^^
