crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__invalid_odoo_method_call_at_odoo_18.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODE9502 `_search` has no parameter `access_rights_uid` in Odoo 18.0
  --> invalid_odoo_method_call.py:16:9
   |
14 |         self.env["sale.order"].read_group([], fields=["amount:sum"], groupby=["partner_id"])
15 |         # ODE9502: `_search` dropped `access_rights_uid` in 18.0.
16 |         self._search([], access_rights_uid=1)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
17 |         # ODE9502: `name_search` renamed `args` to `domain` in 19.0.
18 |         request.env["res.partner"].name_search(name="x", args=[])
   |

ODE9502 `search` takes at most 4 arguments in Odoo 18.0, but 5 were given
  --> invalid_odoo_method_call.py:20:9
   |
18 |         request.env["res.partner"].name_search(name="x", args=[])
19 |         # ODE9502: `search` takes a domain plus three optional keywords, not five positionals.
20 |         self.env["res.partner"].search([], 0, 10, "id", True)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
21 |         # ODE9502: `load` needs its data.
22 |         self.load(["name"])
   |

ODE9502 `load` requires argument `data` in Odoo 18.0
  --> invalid_odoo_method_call.py:22:9
   |
20 |         self.env["res.partner"].search([], 0, 10, "id", True)
21 |         # ODE9502: `load` needs its data.
22 |         self.load(["name"])
   |         ^^^^^^^^^^^^^^^^^^^
23 |         # ODE9502: `default` bound twice.
24 |         self.copy({}, default={})
   |

ODE9502 `copy` got two values for argument `default` in Odoo 18.0
  --> invalid_odoo_method_call.py:24:9
   |
22 |         self.load(["name"])
23 |         # ODE9502: `default` bound twice.
24 |         self.copy({}, default={})
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^
25 |         # `write` is left alone: this file widens it, so the call may well mean that override.
26 |         self.write({}, from_ui=True)
   |

ODE9502 `read_group` has no parameter `aggregates` in Odoo 18.0
  --> invalid_odoo_method_call.py:37:9
   |
35 |     def _good_calls(self):
36 |         # The 20.0 signature, spelled correctly.
37 |         self.read_group([], groupby=["partner_id"], aggregates=["amount:sum"])
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
38 |         self.env["sale.order"]._read_group([], ["partner_id"], ["amount:sum"])
39 |         self.search([], limit=1)
   |

ODE9502 `search` has no parameter `extra` in Odoo 18.0
  --> invalid_odoo_method_call.py:53:9
   |
51 |         self.search([], extra=True)
52 |         # ODE9502: `event.registration` is a different model; `extra` is not a parameter.
53 |         self.env["event.registration"].search([], extra=True)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
54 |         # The class declares `sale.order`, so this one really can mean the override.
55 |         self.env["sale.order"].search([], extra=True)
   |

ODE9502 `write` has no parameter `from_ui` in Odoo 18.0
  --> invalid_odoo_method_call.py:65:9
   |
63 |         # ODE9502: `super()` names the implementation the rule does know, and Odoo's `write`
64 |         # has never taken a `from_ui`.
65 |         super().write(vals, from_ui=from_ui)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
66 |         return super().write(vals)
   |
