crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__license_allowed_configured.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8105 License "LGPL-3" not allowed in manifest file
 --> __manifest__.py:8:5
  |
6 | {
7 |     "name": "My Other Module",
8 |     "license": "LGPL-3",
  |     ^^^^^^^^^
9 | }
  |
