crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__manifest_deprecated_key_before_odoo_16.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8103 [*] Deprecated key "description" in manifest file
 --> __manifest__.py:2:5
  |
1 | {
2 |     "description": "Does things.",
  |     ^^^^^^^^^^^^^
3 |     "name": "First",
4 | }
  |
help: Remove deprecated key "description"
  |
1 | {
  -     "description": "Does things.",
2 |     "name": "First",
  |

ODC8103 [*] Deprecated key "description" in manifest file
 --> __manifest__.py:8:5
  |
6 | {
7 |     "name": "Second",
8 |     "description": "Does things.",
  |     ^^^^^^^^^^^^^
9 | }
  |
help: Remove deprecated key "description"
  |
7 |     "name": "Second",
  -     "description": "Does things.",
8 | }
  |

ODC8103 [*] Deprecated key "description" in manifest file
  --> __manifest__.py:12:5
   |
11 | {
12 |     "description": "Does things.",
   |     ^^^^^^^^^^^^^
13 | }
   |
help: Remove deprecated key "description"
   |
11 | {
   -     "description": "Does things.",
12 +     
13 | }
   |

ODC8103 [*] Deprecated key "active" in manifest file
  --> __manifest__.py:21:5
   |
19 | {
20 |     "name": "Active",
21 |     "active": True,
   |     ^^^^^^^^
22 | }
   |
help: Remove deprecated key "active"
   |
20 |     "name": "Active",
   -     "active": True,
21 | }
   |
note: This is an unsafe fix and may change runtime behavior

ODC8103 [*] Deprecated key "description" in manifest file
  --> __manifest__.py:37:5
   |
35 | {
36 |     "name": "Multiline Description",
37 |     "description": """
   |     ^^^^^^^^^^^^^
38 |         A long legacy description spanning
39 |         several lines: the diagnostic must point at the key,
   |
help: Remove deprecated key "description"
   |
36 |     "name": "Multiline Description",
   -     "description": """
   -         A long legacy description spanning
   -         several lines: the diagnostic must point at the key,
   -         not highlight this whole block.
   -     """,
37 | }
   |
