crates/ruff_linter/src/rules/odoo/snapshots/ruff_linter__rules__odoo__tests__manifest_required_authors_configured.snap
---
source: crates/ruff_linter/src/rules/odoo/mod.rs
---
ODC8101 One of the following authors must be present in manifest: 'Someone Else'
  --> __manifest__.py:12:5
   |
11 | {
12 |     "name": "Module Missing Author",
   |     ^^^^^^
13 | }
   |
